--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 # Core LLM framework
-llama-index-core
+llama-index-core>=0.10.0,<0.12.0
+llama-index-utils-workflow
+llama-index-readers-file
 
 # Vector store
 chromadb
@@ -8,3 +10,7 @@ llama-index-vector-stores-chroma
 # Ollama integrations
 llama-index-embeddings-ollama
 llama-index-llms-ollama
+
+# Code parsing
+tree-sitter>=0.21.0,<0.22.0
+tree-sitter-languages>=1.10.0
