Refactor project structure and remove unused files
- Deleted config.py, requirements.txt, and several prompt-related files to streamline the codebase.
- Updated .gitignore to include new patterns and removed obsolete entries.
- Enhanced README files to reflect the new project structure and clarify backend setup instructions.
- Adjusted script paths in execute_ask.sh and execute_index.sh for consistency with the new directory layout.
- Improved organization of server components, including indexing and prompts, under a dedicated server directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # Python
-.venv/
 __pycache__/
 *.py[cod]
 *.egg-info/
 dist/
 build/
 *.so
+*venv/
 
 # macOS
 .DS_Store
 
-# Generated indexes
+# Generated indexes (runtime data)
 indexes/
 
 # Prompts history (runtime data)
@@ -26,8 +26,9 @@ prompts_history/
 # Environment variables
 .env
 .env.local
+
+# Claude Code
 .claude/
-.venv/
-*venv/
-/server/venv/
-/client/node_modules/
+
+# Node
+node_modules/
