Update configuration for LLM providers and enhance query handling
- Expanded .env.example to include configuration for Ollama, OpenAI, and Claude LLM providers.
- Updated README.md to reflect new environment variable settings and provide examples for each LLM provider.
- Refactored server/config.py to load environment variables for LLM settings dynamically.
- Enhanced query processing in server/prompts/ask.py to support multiple LLM modes and added a generic response for non-code related questions.
- Updated router.py to include a new question intent for generic inquiries.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,21 @@
-DISCORD_BOT_TOKEN=your-discord-bot-token-here
+# LLM Mode: ollama (default), openai, or claude
+MODE=ollama
+
+# Ollama settings (used for embeddings always, LLM when MODE=ollama)
+OLLAMA_BASE_URL=http://localhost:11434
+EMBEDDING_MODEL=nomic-embed-text
+LLM_MODEL=qwen2.5:14b-instruct
+LLM_TIMEOUT=120
+
+# OpenAI settings (used when MODE=openai)
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
+# OPENAI_BASE_URL=  # Optional, for compatible APIs
+
+# Claude settings (used when MODE=claude)
+CLAUDE_API_KEY=
+CLAUDE_MODEL=claude-3-5-sonnet-20240620
+
+# Discord bot (optional)
+DISCORD_BOT_TOKEN=
 INDEX_DIR=./indexes/bots-client-api
