Feat/use single image (#1)
* stable

* Refactor project structure and remove unused files

- Deleted config.py, requirements.txt, and several prompt-related files to streamline the codebase.
- Updated .gitignore to include new patterns and removed obsolete entries.
- Enhanced README files to reflect the new project structure and clarify backend setup instructions.
- Adjusted script paths in execute_ask.sh and execute_index.sh for consistency with the new directory layout.
- Improved organization of server components, including indexing and prompts, under a dedicated server directory.

* Remove obsolete README_SETUP.md and Discord listener files

- Deleted README_SETUP.md to streamline documentation.
- Removed discord_listener.py and helpers.py as part of codebase cleanup.

* Update configuration for LLM providers and enhance query handling

- Expanded .env.example to include configuration for Ollama, OpenAI, and Claude LLM providers.
- Updated README.md to reflect new environment variable settings and provide examples for each LLM provider.
- Refactored server/config.py to load environment variables for LLM settings dynamically.
- Enhanced query processing in server/prompts/ask.py to support multiple LLM modes and added a generic response for non-code related questions.
- Updated router.py to include a new question intent for generic inquiries.

* Refactor API and enhance index path validation

- Removed the 'path' property from IndexInfo type in api.ts.
- Updated CORS middleware in main.py to disable credentials.
- Introduced a new function, get_index_path, to validate and retrieve index paths safely.
- Improved error handling in the ask endpoint to utilize the new index path validation logic.

---------

Co-authored-by: NilGolan <nil.golan@ke-la.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # Python
-.venv/
 __pycache__/
 *.py[cod]
 *.egg-info/
 dist/
 build/
 *.so
+*venv/
 
 # macOS
 .DS_Store
 
-# Generated indexes
+# Generated indexes (runtime data)
 indexes/
 
 # Prompts history (runtime data)
@@ -26,4 +26,9 @@ prompts_history/
 # Environment variables
 .env
 .env.local
+
+# Claude Code
 .claude/
+
+# Node
+node_modules/
