--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,10 +11,18 @@ llama-index-vector-stores-chroma
 llama-index-embeddings-ollama
 llama-index-llms-ollama
 
+# Remote LLM providers (optional, based on MODE)
+llama-index-llms-openai
+llama-index-llms-anthropic
+
 # Code parsing
 tree-sitter>=0.21.0,<0.22.0
 tree-sitter-languages>=1.10.0
 
+# API framework
+fastapi
+uvicorn[standard]
+python-dotenv
+
 # Discord
 discord.py
-python-dotenv
