Add healthcheck and setup service for Ollama in Docker Compose
- Introduced a healthcheck for the Ollama service to ensure it is ready before other services depend on it.
- Added a new service, ollama-setup, to automatically pull the nomic-embed-text model during initialization.
- Updated README.md to reflect the automatic model pulling process for improved user experience.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,6 +8,27 @@ services:
     volumes:
       - ollama_models:/root/.ollama
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "ollama", "list"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  ollama-setup:
+    image: ollama/ollama:latest
+    depends_on:
+      ollama:
+        condition: service_healthy
+    volumes:
+      - ollama_models:/root/.ollama
+    environment:
+      - OLLAMA_HOST=http://ollama:11434
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        ollama pull nomic-embed-text
+        echo "Models pulled successfully"
+    restart: "no"
 
   repo-qa:
     build:
