Refactor Docker setup and remove obsolete Dockerfile
- Renamed 'repo-qa' service to 'backend' and updated build context for clarity.
- Introduced a new 'frontend' service with its own build context and dependencies.
- Adjusted volume mappings for the backend service to support hot reloading.
- Removed the obsolete Dockerfile as the build process is now handled separately for frontend and backend.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,20 +30,31 @@ services:
         echo "Models pulled successfully"
     restart: "no"
 
-  repo-qa:
+  backend:
     build:
-      context: .
+      context: ./server
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
       - ./indexes:/app/indexes
     env_file:
-      - .env
+      - ./server/.env
     environment:
       - OLLAMA_BASE_URL=http://ollama:11434
+      - INDEXES_DIR=/app/indexes
     depends_on:
       - ollama
+    restart: unless-stopped
+
+  frontend:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
     restart: unless-stopped
 
 volumes:
