--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -30,21 +30,33 @@ services:
         echo "Models pulled successfully"
     restart: "no"
 
-  repo-qa:
+  backend:
     build:
-      context: .
+      context: ./server
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
       - ./indexes:/app/indexes
-      - ./server:/app/server
+      - ./server:/app  # Hot reload for dev
     env_file:
-      - .env
+      - ./server/.env
     environment:
       - OLLAMA_BASE_URL=http://ollama:11434
+      - INDEXES_DIR=/app/indexes
     depends_on:
       - ollama
+    restart: unless-stopped
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+  frontend:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
     restart: unless-stopped
 
 volumes:
